<resources>
    <string name="app_name">Lista</string>
    <string name="my_goods">My goods</string>
    <string name="search_goods">search items</string>
    <string name="category_add_success">Category created successfully.</string>
    <string name="error">An error occurred. Please try again.</string>
    <string name="category_exists">This category already exists.</string>
    <string name="input_txt_not_valid">Input text is not valid.</string>
    <string name="good_s_name">Item\'s name</string>
    <string name="good_add_success">Item created successfully</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="arrow">Arrow</string>
    <string name="category_s_name">Category\'s name</string>
    <string name="logo">logo</string>
    <string name="delete_icon">delete icon</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="hint_good_search">What good are you looking for ?</string>
    <string name="deleted">has been deleted</string>
    <string name="undo">UNDO</string>
    <string name="add_a_category">Add a category</string>
    <string name="category_to_add">What category do you want to add ?</string>
    <string name="adding_a_category">Adding a Category</string>
    <string name="yes">YES</string>
    <string name="empty_list_message">No items to be displayed</string>
    <string name="category_icon">category icon</string>
    <string name="network_error">Please check your network connection</string>
    <string name="invitation">You can invite a friend to share your Lista items</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="send_invite">Send invitation</string>
    <string name="received_invites">Received invitation</string>
    <string name="sender_phone">sender phone</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="invitation_already_sent">You have already sent an invitation to this person.</string>
    <string name="team_s_name">Team\'s name</string>
    <string name="team_name_required">Team name is required</string>
    <string name="team_already_created">You have already created this team !</string>
    <string name="no_invitations_received">No Invitations received</string>
    <string name="synchronize">Synchronize</string>
    <string name="cant_invite_your_self">You can\'t invite yourself&#8230;</string>
    <string name="team">Team</string>
    <string name="members">Members</string>
    <string name="invite_a_friend">Invite a friend to join your team</string>
    <string name="description">description</string>
    <string name="sign_up">Sign Up</string>
    <string name="good_description">Good description</string>
    <string name="invitation_accepted">invitation accepted</string>
    <string name="invitation_declined">invitation declined</string>
    <string name="lista">Lista</string>
    <string name="user_name">User name</string>
    <string name="user_name_required">User name required</string>
    <string name="member_of_the_team_now">Great ! You\'re a member of the team now ;-)</string>
    <string name="choose_a_category">Item not found. Please choose a category to add it.</string>
    <string name="lista_shops">Lista shops</string>
    <string name="error_play_services">Can\'t connect to play services</string>
    <string name="allow_location_permission_in_settings">Please allow location permission in your app settings</string>
    <string name="loading">Loading…</string>
    <string name="shop_selection">Shop Selection</string>
    <string name="filter">Filter</string>
    <string name="search">search</string>
    <string name="city">City</string>
    <string name="filters">Filters</string>
    <string name="my_orders">Ongoing Orders</string>
    <string name="invite_friends">Invite friends</string>
    <string name="my_invitations">My invitations</string>
    <string name="sync_finished">sync finished</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="show_results">Show results</string>
    <string name="select_city">Select at least one city</string>
    <string name="filters_removed">Filters have been removed</string>
    <string name="error_map">The map will not work properly</string>
    <string name="order_my_list">Order my list</string>
    <string name="shops">Shops</string>
    <string name="Registering_order">Registering the order…</string>
    <string name="empty_order">the order does not contain any items !</string>
    <string name="no_additional_items">No additional items to order. Please check your main list</string>
    <string name="shop_name">shop name</string>
    <string name="your_order_will_be_sent_to">Your order will be sent to :</string>
    <string name="order_details">Order Details</string>
    <string name="no_orders_registered">No orders have been registered</string>
    <string name="did_you_get_your_order">Did you get your order ?</string>
    <string name="order_completed">Order completed ?</string>
    <string name="not_yet">Not yet</string>
    <string name="next">Next</string>
    <string name="default_category_image">Default category image</string>
    <string name="add_an_order">Add an order</string>
    <string name="_1_shop_selection">1 - Shop selection</string>
    <string name="_2_list_confirmation">2 - list confirmation</string>
    <string name="select">Select</string>
    <string name="_0">0</string>
    <string name="not_now">Not now</string>
    <string name="send">Send</string>
    <string name="select_amount">Please, select an amount.</string>
    <string name="brand_or_description">Brand, Description…</string>
    <string name="item_s">item(s)</string>
    <string name="set_descriptions">Some articles needs a description. Please, tap an article to set its description.</string>
    <string name="input_phone_description">Please take a moment to verify your phone number.\nThis helps us confirm your indentity and secure your account.</string>
    <string name="country_flag">Country flag</string>
    <string name="hint_phone_number">123456789</string>
    <string name="hint_verification_code">123456</string>
    <string name="sms_sent_to">We just sent an SMS to&#160;</string>
    <string name="with_code">&#160;with a code for you to enter here</string>
    <string name="phone_required">Phone number is required</string>
    <string name="not_valid_phone">Please enter a valid phone number</string>
    <string name="code_required">Verification code is required</string>
    <string name="not_valid_code">Verification code is not valid</string>
    <string name="signing_up">Signing up…</string>
    <string name="welcome_msg">Welcome to Lista</string>
    <string name="your_firend_phone">your firend phone</string>
    <string name="my_list">My List</string>
    <string name="my_profile">My profile</string>
    <string name="phone">Phone :</string>
    <string name="user_name_label">User name :</string>
    <string name="user_name_hint"><i>Firstname Lastname</i></string>
    <string name="account">My profile</string>
    <string name="no_items_to_buy">There are no items to order</string>
    <string name="ongoing_orders">Ongoing orders</string>
    <string name="closed_orders">Closed orders</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="status">status:</string>
    <string name="ref">Ref :</string>
    <string name="date">Date de création :</string>
    <string name="items">Items :</string>
    <string name="forTime">à collerter le :</string>
    <string name="registered">Registered</string>
    <string name="read">processing in progress</string>
    <string name="can_collect">You can collect your order</string>
    <string name="completed">Completed</string>
    <string name="not_supported">Items not available</string>
    <string name="sync_account_type" translatable="false">wingoods.winservices.com</string>
    <string name="content_authority" translatable="false">com.winservices.wingoods</string>
    <string name="_1" translatable="false">1</string>
    <string name="facebook_app_id" translatable="false">247070192572725</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb247070192572725</string>
    <string name="permission_preference" translatable="false">PERMISSION_PREFERENCE</string>
    <string name="permission_access_fine_location" translatable="false">PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location" translatable="false">PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="validate_order_form">Validation de la commande</string>
    <string name="ok">OK</string>
    <string name="invite_phone_hint">+2121234567890</string>
    <string name="no_shops_referenced">There is currently no referenced store to process items on your list. We are working hard to improve that! Thank you for your understanding.</string>
    <string name="got_it">Got it</string>
    <string name="referenced_shops">Referenced shops</string>
    <string name="sign_in_failed">Signing in failed. please try again.</string>
    <string name="share_message">Gagnez du temps avec Lista, l\'application qui facilite la corvée des courses ;-)</string>
    <string name="user_address_text">Votre adresse</string>
    <string name="auto_collect">Livraison à domicile</string>
    <string name="submit">Valider</string>
    <string name="localization_question">Cette adresse correspond à ma position actuelle</string>
    <string name="GPS_hint">00.000000, -0.000000</string>
    <string name="collect_time">Date souhaitée</string>
    <string name="delivery_hour_label">Delivery time</string>
    <string name="verify_location">Check my location</string>
    <string name="delivery_address">Adresse de livraison</string>
    <string name="get_my_location">Récupérer ma position</string>
    <string name="set_location_manually">Saisir manuellement</string>
    <string name="gps_location">Position de livraison (GPS)</string>
    <string name="address_required">Adresse requise</string>
    <string name="location_required">Position GPS requise</string>
    <string name="gps_format">Format 00.000000, -0.000000</string>
    <string name="livraison_disponible">Livraison disponible</string>
    <string name="shop_type">shop type</string>
    <string name="delivery_status">Delivery in progress</string>
    <string name="todo">TODO</string>
    <string name="lista_welcome1">Lista !</string>
    <string name="lista_welcome2">Les courses faciles…</string>
    <string name="share">Partager</string>
    <string name="r_f">Réf</string>
    <string name="_123">123</string>
    <string name="livraison_le">Livraison le :</string>
    <string name="vendredi_09">vendredi 09</string>
    <string name="adresse_livraison">Adresse :</string>
    <string name="delivery_address_value">Adresse de livraison du client saisie lors de la commande</string>
    <string name="localisation_gps">Localisation GPS</string>
    <string name="livrer">à livrer</string>
    <string name="delivery_time_label">à recevoir le :</string>
    <string name="closed_orders_title">Commandes clôturées</string>
    <string name="my_orders_welcome">Mes commandes</string>
    <string name="total_commande_label">Total commande (Dhs) :</string>
    <string name="_00000_00">00000.00</string>
    <string name="prix_dhs">Total :</string>
    <string name="currency"> Dhs</string>
    <string name="t_l_mobile">Tél Mobile</string>
</resources>