<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_add_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_category_name"
        style="@style/TextViewLabel"
        android:layout_width="match_parent"
        android:text="@string/adding_a_category" />

    <EditText
        android:id="@+id/edit_category"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/category_to_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_add_category"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>