<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/txt_No_items"
        android:text="@string/no_additional_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_additional_goods_to_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="90"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="50"
            style="@style/Button"/>

        <Button
            android:id="@+id/btn_add_additional_good"
            android:layout_width="wrap_content"
            android:text="@string/add"
            android:layout_weight="50"
            style="@style/Button"/>

    </LinearLayout>

</LinearLayout>