<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_category_in_purchases_list"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:background="@drawable/category_bckgrd_in_purchases_list">


    <ImageView
        android:id="@+id/ic_category_in_purchases_list"
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:layout_gravity="start|center"
        android:src="@drawable/steak"
        android:layout_weight="2"
        android:contentDescription="@string/category_icon" />

    <TextView
        android:id="@+id/txt_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category_s_name"
        android:layout_gravity="center"
        android:gravity="start|center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="90"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/img_arrow_in_purchases_list"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow_down"
        android:layout_weight="2"/>

</LinearLayout>