<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCollectTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/collect_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">

        <NumberPicker
            android:id="@+id/pickerDay"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50" />

        <NumberPicker
            android:id="@+id/pickerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"/>

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbAutoCollect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/auto_collect"
            style="@style/TextViewLabel"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editUserAddress"
            android:layout_margin="16dp"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="150"
            android:lines="2"
            android:hint="@string/user_address_text"
            android:visibility="visible"
            android:autofillHints="@string/user_address_text" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            style="@style/TextViewLabel"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/localization_question"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLocation"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_location"
                style="@style/TextViewLabel"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editLocation"
                style="@style/EditText"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:lines="2"
                android:hint="@string/GPS_hint"
                android:visibility="visible"
                android:autofillHints="@string/GPS_hint"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnRefreshLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/refresh"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCollectTime"
        style="@style/Button"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>