<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.winservices.wingoods.activities.InviteActivity"
    android:theme="@style/AppTheme"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtInvitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitation"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/txtTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:hint="@string/team_s_name"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/txtMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/members"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtMembersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtInvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/invite_a_friend"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/linearInvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/imgContact"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/phone_book"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <EditText
            android:id="@+id/editPhoneInvitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="95"
            android:maxLength="13"
            android:hint="@string/invite_phone_hint"
            android:inputType="phone"
            android:textSize="15sp"/>

        <ImageButton
            android:id="@+id/btnSendIntivation"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_send"
            android:layout_gravity="top"
            android:contentDescription="@string/description" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clShareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/txtShareApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="It seems that your friend hasn't installed Lista yet. Share ?"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnShareApp"
            android:layout_margin="10dp"
            android:singleLine="false"
            android:scrollHorizontally="false"/>

        <ImageButton
            android:id="@+id/btnShareApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/whatsapp"
            android:contentDescription="@string/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtShareApp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
